--- a/my-firstapp/src/Components/Navbar.css
+++ b/my-firstapp/src/Components/Navbar.css
@@ -6,7 +6,7 @@
   top: 0;
   width: 100%;
   z-index: 1000;
-  padding: 0.5rem 1rem;
+  padding: 0.3rem 1rem; /* Reduced from 0.5rem 1rem */
 }
 
 .navbar-brand {
@@ -17,13 +17,13 @@
   font-style: italic;
   font-weight: 700;
   color: #fff;
-  font-size: 35px;
+  font-size: 30px; /* Reduced from 35px */
   letter-spacing: 0.5rem;
 }
 
 .logo-img {
-  width: 30px;
-  height: 25px;
+  width: 25px; /* Reduced from 30px */
+  height: 20px; /* Reduced from 25px */
   margin-right: 0.5rem;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .nav-link:hover {
-  color: #6c8cff ;
+  color: #6c8cff;
 }
 
 .nav-icons {
@@ -85,27 +85,27 @@
 }
 
 .profile-img {
-  width: 35px;
-  height: 35px;
+  width: 30px; 
+  height: 30px; 
   border-radius: 50%;
   border: 2px solid #fff;
 }
 
 @media (max-width: 991px) {
   .navbar-brand {
-    font-size: 22px;
+    font-size: 20px; 
     letter-spacing: 0.2rem;
   }
 
   .logo-img {
-    width: 22px;
-    height: 18px;
+    width: 20px; 
+    height: 16px; 
   }
 }
 
 @media (min-width: 992px) {
   .navbar {
-    padding: 0.5rem 2rem;
+    padding: 0.3rem 2rem; 
   }
 
   .navbar-collapse {
@@ -121,14 +121,14 @@
 
   .nav-link {
     border-bottom: none;
-    padding: 0.5rem 1rem;
-    font-size: 20px;
+    padding: 0.4rem 1rem; 
+    font-size: 18px; 
   }
 
   .nav-link:hover {
     text-decoration: 5px rgba(255, 0, 0, 0.667) underline;
     border-radius: 5px;
-    transition:ease-in 0.9s; 
+    transition: ease-in 0.9s;
   }
 
   .nav-icons {
